<resources>
    <string name="app_name">LabExam.02</string>
    <string name="welcome_text">Welcome Back!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forget_password">Forget Password?</string>">
    <string name="continue_with">Or Continue With</string>">
    <string name="not_registered">Not Registered?</string>">
    <string name="join_family">Join Gains Famliy</string>">
    <string name="join_to_family">Join to Gains Famliy!</string>">
    <string name="view_workout">View all Schedules</string>">
    <string name="type_select">Select Workout Type</string>">
    <string name="logout">Logout</string>">
    <string name="noti1">New Workout Plans and Updates</string>">
    <string name="noti2">Online Workout Session Details</string>">
    <string name="noti3">Gym Memberships and Details</string>">
    <string name="noti4">New Diet Plans</string>">
    <string name="msg">New Messages !</string>">
    <string name="editprofile">Edit Profile Details</string>
    <string name="updateprofile">Update Profile</string>


</resources>