<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#040000">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="188dp"
        android:layout_height="180dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="112dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTxt"
        app:srcCompat="@mipmap/logoappgains" />

    <TextView
        android:id="@+id/welcomeTxt"
        android:layout_width="322dp"
        android:layout_height="53dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="45dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textColor="@color/gold"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailTxt"
        android:layout_width="314dp"
        android:layout_height="43dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="49dp"
        android:ems="10"
        android:fontFamily="@font/aldrich"
        android:hint="Enter Email Address"
        android:inputType="text"
        android:textColor="@color/gold"
        android:textColorHint="#85DC8E33"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/gold"
        android:fontFamily="@font/aldrich"
        android:paddingTop="3dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="313dp"
        android:layout_height="40dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="49dp"
        android:ems="10"
        android:fontFamily="@font/aldrich"
        android:hint="Enter Password"
        android:inputType="textPassword"
        android:textColor="@color/gold"
        android:textColorHint="#85DC8E33"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTxt" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/forget_password"
        android:textColor="#9EFFFFFF"
        android:textColorLink="#FF9800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="155dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/not_registered"
        android:textColor="#C8FFFFFF"
        android:textColorLink="#FF9800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <TextView
        android:id="@+id/regLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="142dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/join_family"
        android:textColor="@color/gold"
        android:textColorLink="#FF9800"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="151dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="150dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/continue_with"
        android:textColor="#C8FFFFFF"
        android:textColorLink="#FF9800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regLink" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="40dp"
        android:layout_height="36dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="84dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/fb" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="40dp"
        android:layout_height="36dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="84dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/appl" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="36dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="84dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/google" />

</androidx.constraintlayout.widget.ConstraintLayout>