<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="376dp"
            android:layout_height="42dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="71dp"
            android:fontFamily="@font/aldrich"
            android:text="Notification Center"
            android:textAlignment="center"
            android:textColor="@color/gold"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="175dp"
            android:layout_height="35dp"
            android:layout_marginStart="29dp"
            android:layout_marginTop="57dp"
            android:layout_marginEnd="208dp"
            android:fontFamily="@font/aldrich"
            android:text="@string/msg"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="300dp"
            android:layout_height="23dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/aldrich"
            android:text="@string/noti1"
            android:textAlignment="textStart"
            android:textColor="@color/gold"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toBottomOf="@+id/textView23" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="300dp"
            android:layout_height="23dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/aldrich"
            android:text="@string/noti2"
            android:textAlignment="textStart"
            android:textColor="@color/gold"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView18"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="300dp"
            android:layout_height="23dp"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/aldrich"
            android:text="@string/noti3"
            android:textAlignment="textStart"
            android:textColor="@color/gold"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView21"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="300dp"
            android:layout_height="23dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/aldrich"
            android:text="@string/noti4"
            android:textAlignment="textStart"
            android:textColor="@color/gold"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView23"
            app:layout_constraintTop_toBottomOf="@+id/divider3" />

        <FrameLayout
            android:layout_width="372dp"
            android:layout_height="106dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="17dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/BulkLink">

            <ImageView
                android:id="@+id/imageView28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/navbar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/navHomeWork"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:padding="12dp"
                    app:srcCompat="@drawable/exercisenon" />

                <ImageView
                    android:id="@+id/navHomeNoti"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:padding="20dp"
                    app:srcCompat="@drawable/notificationwhite" />

                <ImageView
                    android:id="@+id/navHomeUser"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:padding="20dp"
                    app:srcCompat="@drawable/user" />
            </LinearLayout>

        </FrameLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="350dp"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="31dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView10" />

        <View
            android:id="@+id/divider2"
            android:layout_width="350dp"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="31dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView18" />

        <View
            android:id="@+id/divider3"
            android:layout_width="350dp"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="31dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView23" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="63dp"
            android:layout_height="38dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toStartOf="@+id/textView18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView23"
            app:srcCompat="@drawable/chat" />

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="63dp"
            android:layout_height="38dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="35dp"
            app:layout_constraintEnd_toStartOf="@+id/textView20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:srcCompat="@drawable/chat" />

        <ImageView
            android:id="@+id/imageView21"
            android:layout_width="63dp"
            android:layout_height="38dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="34dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2"
            app:srcCompat="@drawable/chat" />

        <ImageView
            android:id="@+id/imageView23"
            android:layout_width="63dp"
            android:layout_height="38dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="36dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3"
            app:srcCompat="@drawable/chat" />

        <View
            android:id="@+id/divider3"
            android:layout_width="350dp"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="31dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView21" />

        <ImageView
            android:id="@+id/imageView25"
            android:layout_width="166dp"
            android:layout_height="169dp"
            android:layout_marginStart="122dp"
            android:layout_marginTop="128dp"
            android:layout_marginEnd="123dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3"
            app:srcCompat="@mipmap/logoappgains" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView17"
        android:layout_width="376dp"
        android:layout_height="42dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="71dp"
        android:fontFamily="@font/aldrich"
        android:text="Notification Center"
        android:textAlignment="center"
        android:textColor="@color/gold"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:layout_width="372dp"
        android:layout_height="106dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="17dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BulkLink">

        <ImageView
            android:id="@+id/imageView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/navbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/navHomeWork"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:padding="12dp"
                app:srcCompat="@drawable/exercisenon" />

            <ImageView
                android:id="@+id/navHomeNoti"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:padding="20dp"
                app:srcCompat="@drawable/notificationwhite" />

            <ImageView
                android:id="@+id/navHomeUser"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:padding="20dp"
                app:srcCompat="@drawable/user" />
        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>