<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#040000"
    android:textAlignment="center">

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="40dp"
        android:layout_height="36dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="84dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:srcCompat="@drawable/appl" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="40dp"
        android:layout_height="36dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="84dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:srcCompat="@drawable/google" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="40dp"
        android:layout_height="36dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="84dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView12"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:srcCompat="@drawable/fb" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="188dp"
        android:layout_height="180dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="112dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTxt"
        app:srcCompat="@mipmap/logoappgains" />

    <TextView
        android:id="@+id/welcomeTxt"
        android:layout_width="346dp"
        android:layout_height="53dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="45dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/join_to_family"
        android:textAlignment="center"
        android:textColor="@color/gold"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailTxt4"
        android:layout_width="314dp"
        android:layout_height="43dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="49dp"
        android:ems="10"
        android:fontFamily="@font/aldrich"
        android:hint="Enter Email Address"
        android:inputType="text"
        android:textColor="@color/gold"
        android:textColorHint="#85DC8E33"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTxt5" />

    <EditText
        android:id="@+id/emailTxt5"
        android:layout_width="314dp"
        android:layout_height="43dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="49dp"
        android:ems="10"
        android:fontFamily="@font/aldrich"
        android:hint="Enter Your Name"
        android:inputType="text"
        android:textColor="@color/gold"
        android:textColorHint="#85DC8E33"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="313dp"
        android:layout_height="40dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="49dp"
        android:ems="10"
        android:fontFamily="@font/aldrich"
        android:hint="Re-Enter Password"
        android:inputType="textPassword"
        android:textColor="@color/gold"
        android:textColorHint="#85DC8E33"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="313dp"
        android:layout_height="40dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="49dp"
        android:ems="10"
        android:fontFamily="@font/aldrich"
        android:hint="Enter New Password"
        android:inputType="textPassword"
        android:textColor="@color/gold"
        android:textColorHint="#85DC8E33"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTxt4" />

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="36dp"
        android:layout_height="34dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="348dp"
        android:layout_marginBottom="23dp"
        app:layout_constraintBottom_toTopOf="@+id/welcomeTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/continue_with"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/imageView14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regBtn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/regBtn"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/gold"
        android:fontFamily="@font/aldrich"
        android:paddingTop="3dp"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>